--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
-    <title>Speech Recognition App</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@1000&display=swap" rel="stylesheet">    
-  </head>
-  <body>
-    <div id="app">
-      <div id="output"></div>
-      <button id="toggleButton">Let's talk! 🗣️</button>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Autism Waves Wallpaper</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <svg id="audio-waves" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path class="wave wave1" d="M24 17V31" stroke="#000000" stroke-width="4" stroke-linecap="round"></path>
+            <path class="wave wave2" d="M33 11V37" stroke="#000000" stroke-width="4" stroke-linecap="round"></path>
+            <path class="wave wave3" d="M6 17V31" stroke="#000000" stroke-width="4" stroke-linecap="round"></path>
+            <path class="wave wave4" d="M42 18V30" stroke="#000000" stroke-width="4" stroke-linecap="round"></path>
+            <path class="wave wave5" d="M15 4V44" stroke="#000000" stroke-width="4" stroke-linecap="round"></path>
+        </svg>
+    </div>
+    <div class="transcript-container">
+        <div id="live-transcript" class="transcript"></div>
     </div>
     <script src="script.js"></script>
-  </body>
+</body>
 </html>
